// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ButtonPrimary /> should render button 1`] = `
<DocumentFragment>
  <button
    class="styles__1mdc28jh styles_layerStyle__1mdc28j0 styles_button_variant_primary__1mdc28jj styles_layerStyle__1mdc28j2 styles_button_size_md__1mdc28jn styles_layerStyle__1mdc28j6"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`<ButtonPrimary /> should render loader 1`] = `
<DocumentFragment>
  <button
    class="styles__1mdc28jh styles_layerStyle__1mdc28j0 styles_button_variant_primary__1mdc28jj styles_layerStyle__1mdc28j2 styles_button_size_md__1mdc28jn styles_layerStyle__1mdc28j6 styles_button_loading_true__1mdc28jq styles_layerStyle__1mdc28j9"
  >
    <div
      class="styles__4787ng9 styles_layerStyle__4787ng1 styles_spinner_variant_currentcolor__4787ngc styles_layerStyle__4787ng4 styles_spinner_size_md__4787nge styles_layerStyle__4787ng6"
    />
  </button>
</DocumentFragment>
`;
